--- a/Assignment1/MyFirstRMarkdown.html
+++ b/Assignment1/MyFirstRMarkdown.html
@@ -1721,6 +1721,8 @@ M_YX</code></pre>
 <div id="about-solve" class="section level3">
 <h3>about solve()</h3>
 <p>use ?solve() to check the usage of solve()</p>
+<p>solve(Y,X) means <span class="math inline">\(Y^{-1}\cdot
+X\)</span></p>
 <pre class="r"><code>result&lt;-solve(Y,X)
 result</code></pre>
 <pre><code>##      [,1] [,2] [,3]
