--- a/Assignment1/R_week1.html
+++ b/Assignment1/R_week1.html
@@ -1630,7 +1630,8 @@ display: none;
 </div>
 
 
-<p>The code chunk appears:</p>
+<div id="vector" class="section level2">
+<h2>Vector</h2>
 <pre class="r"><code>x&lt;-c(3,7,4,2,1,2,-4,-5)
 x</code></pre>
 <pre><code>## [1]  3  7  4  2  1  2 -4 -5</code></pre>
@@ -1653,8 +1654,14 @@ w</code></pre>
 a</code></pre>
 <pre><code>## [1] &quot;TRUE&quot;    &quot;3&quot;       &quot;Bristol&quot;</code></pre>
 <pre class="r"><code>#they are all characters</code></pre>
+<ul>
+<li>查看vector的type</li>
+</ul>
 <pre class="r"><code>mode(a)  # You can test the type like this</code></pre>
 <pre><code>## [1] &quot;character&quot;</code></pre>
+</div>
+<div id="创建矩阵matrix" class="section level2">
+<h2>创建矩阵Matrix</h2>
 <pre class="r"><code>M&lt;-matrix(seq(10),2,5)
 M</code></pre>
 <pre><code>##      [,1] [,2] [,3] [,4] [,5]
@@ -1665,6 +1672,9 @@ M</code></pre>
 <pre><code>## [1] 6</code></pre>
 <pre class="r"><code>M[,4]</code></pre>
 <pre><code>## [1] 7 8</code></pre>
+<ul>
+<li>判断是否是vector的类型</li>
+</ul>
 <pre class="r"><code>is.vector(M[2,])</code></pre>
 <pre><code>## [1] TRUE</code></pre>
 <pre class="r"><code>first_list&lt;-list(TRUE,3,&quot;Bristol&quot;)  # be different from vector, lists can be of mixed type
@@ -1684,6 +1694,7 @@ second_list$t_value</code></pre>
 <pre><code>## [1] 3</code></pre>
 <pre class="r"><code>second_list$city</code></pre>
 <pre><code>## [1] &quot;Bristol&quot;</code></pre>
+</div>
 <div id="data-frames-are-powerful-objects-for-representing-and-manipulating-tabular-data" class="section level2">
 <h2>Data frames are powerful objects for representing and manipulating
 <strong>tabular data</strong></h2>
@@ -1701,24 +1712,25 @@ first_data_frame</code></pre>
 <h2>Arithmetic operations</h2>
 <pre class="r"><code>((4+2-1)*4/2)^2</code></pre>
 <pre><code>## [1] 100</code></pre>
-<pre class="r"><code>a&lt;-matrix(sample(1:10,6,replace=T),2,3) #a random 2 by 3 matrix
+<pre class="r"><code>#在sample中，replace=TRUE代表一个样本可以出现好几次
+a&lt;-matrix(sample(1:10,6,replace=T),2,3) #a random 2 by 3 matrix
 a</code></pre>
 <pre><code>##      [,1] [,2] [,3]
-## [1,]    1    3    4
-## [2,]    9    1    2</code></pre>
+## [1,]    7    6    7
+## [2,]    2    6    6</code></pre>
 <pre class="r"><code>b&lt;-matrix(sample(1:10,6,replace=T),2,3)
 b</code></pre>
 <pre><code>##      [,1] [,2] [,3]
-## [1,]    9    5    3
-## [2,]    3    4    7</code></pre>
+## [1,]   10    7    7
+## [2,]    3    1    8</code></pre>
 <pre class="r"><code>a*b</code></pre>
 <pre><code>##      [,1] [,2] [,3]
-## [1,]    9   15   12
-## [2,]   27    4   14</code></pre>
+## [1,]   70   42   49
+## [2,]    6    6   48</code></pre>
 <pre class="r"><code>a%*%t(b)</code></pre>
 <pre><code>##      [,1] [,2]
-## [1,]   36   43
-## [2,]   92   45</code></pre>
+## [1,]  161   83
+## [2,]  104   60</code></pre>
 <pre class="r"><code># t(b) computes the transpose of b
 #%*% performs matrix multiplication</code></pre>
 </div>
@@ -1735,6 +1747,9 @@ b&lt;-c(TRUE,FALSE,TRUE,FALSE)
 <pre><code>## [1]  TRUE FALSE FALSE FALSE</code></pre>
 <pre class="r"><code>a|b</code></pre>
 <pre><code>## [1]  TRUE  TRUE  TRUE FALSE</code></pre>
+<ul>
+<li>异或运算：值不相等时为真</li>
+</ul>
 <pre class="r"><code>xor(a,b)</code></pre>
 <pre><code>## [1] FALSE  TRUE  TRUE FALSE</code></pre>
 </div>
@@ -1786,7 +1801,7 @@ f1</code></pre>
 <pre><code>## function(x){
 ##     return (x-num_to_sub)
 ##   }
-## &lt;environment: 0x7f83110cee08&gt;</code></pre>
+## &lt;environment: 0x7f9983b53b68&gt;</code></pre>
 <pre class="r"><code>print(f1(2))</code></pre>
 <pre><code>## [1] 1</code></pre>
 <pre class="r"><code>a&lt;-2
